--- a/index.html
+++ b/index.html
@@ -24,9 +24,70 @@
       padding: 24px;
     }
 
+    /* ================== TELA DE LOGIN ================== */
+    .login-overlay {
+      position: fixed;
+      inset: 0;
+      background: radial-gradient(circle at top, #151821 0, #050814 70%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+
+    .login-box {
+      background: var(--bg-card);
+      border: 1px solid rgba(255, 154, 74, 0.3);
+      border-radius: 14px;
+      padding: 28px;
+      width: 100%;
+      max-width: 360px;
+      text-align: center;
+    }
+
+    .login-box h2 {
+      margin-bottom: 6px;
+    }
+
+    .login-box p {
+      font-size: 13px;
+      color: var(--text-soft);
+      margin-bottom: 16px;
+    }
+
+    .login-box input {
+      width: 100%;
+      padding: 12px;
+      border-radius: 10px;
+      border: 1px solid rgba(255,154,74,.3);
+      background: #050814;
+      color: #fff;
+      margin-bottom: 12px;
+      outline: none;
+    }
+
+    .login-box button {
+      width: 100%;
+      padding: 12px;
+      border-radius: 999px;
+      border: none;
+      background: linear-gradient(135deg, var(--accent), var(--accent-soft));
+      font-weight: 700;
+      cursor: pointer;
+    }
+
+    .login-error {
+      color: #ff6b6b;
+      font-size: 12px;
+      margin-top: 8px;
+      display: none;
+    }
+
+    /* ================== PORTAL ================== */
     .container {
       max-width: 1150px;
       margin: auto;
+      display: none; /* só aparece após senha */
     }
 
     header {
@@ -49,7 +110,6 @@
       color: var(--text-soft);
     }
 
-    /* MENU PRINCIPAL */
     .main-menu {
       margin: 24px 0;
       display: grid;
@@ -60,13 +120,11 @@
     .menu-btn {
       padding: 12px 14px;
       border-radius: 999px;
-      border: 1px solid rgba(255, 154, 74, 0.3);
-      background: linear-gradient(135deg, rgba(255,122,26,0.12), rgba(5,8,20,0.95));
+      border: 1px solid rgba(255,154,74,.3);
+      background: linear-gradient(135deg, rgba(255,122,26,.12), rgba(5,8,20,.95));
       color: var(--text);
-      font-size: 15px;
       font-weight: 600;
       cursor: pointer;
-      transition: .15s;
     }
 
     .menu-btn.active {
@@ -74,18 +132,8 @@
       color: #050814;
     }
 
-    .menu-btn:hover {
-      transform: translateY(-2px);
-      border-color: var(--accent-soft);
-    }
-
-    .section {
-      margin-bottom: 28px;
-    }
-
-    .hidden {
-      display: none;
-    }
+    .section { margin-bottom: 28px; }
+    .hidden { display: none; }
 
     .section-title {
       font-size: 18px;
@@ -93,217 +141,83 @@
       color: var(--accent-soft);
     }
 
-    /* GRID PADRÃO DOS CARDS */
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 12px;
     }
 
-    /* GRID ESPECIAL DO CALENDÁRIO (CARD MENOR) */
     .grid-calendario {
       display: grid;
-      grid-template-columns: minmax(260px, 420px); /* largura parecida com os outros */
-      justify-content: flex-start;                /* não centraliza, fica alinhado à esquerda */
-      gap: 12px;
+      grid-template-columns: minmax(260px, 420px);
+      justify-content: flex-start;
     }
 
     .link-card {
       padding: 14px;
       background: var(--bg-card);
       border-radius: 12px;
-      border: 1px solid rgba(255, 154, 74, 0.25);
+      border: 1px solid rgba(255,154,74,.25);
       text-decoration: none;
       color: var(--text);
-      transition: .15s;
       display: block;
     }
 
     .link-card:hover {
-      transform: translateY(-2px);
       background: var(--bg-card-soft);
       border-color: var(--accent-soft);
     }
 
-    .link-title {
-      font-size: 15px;
-      font-weight: 600;
-    }
-
-    .link-meta {
-      font-size: 11px;
-      color: var(--text-soft);
-    }
+    .link-title { font-weight: 600; }
+    .link-meta { font-size: 11px; color: var(--text-soft); }
   </style>
 </head>
 
 <body>
-<div class="container">
 
-  <!-- LOGO / TÍTULO -->
+<!-- LOGIN -->
+<div class="login-overlay" id="loginOverlay">
+  <div class="login-box">
+    <h2>Portal Areia Ana</h2>
+    <p>Acesso restrito</p>
+    <input type="password" id="senha" placeholder="Digite a senha">
+    <button onclick="validarSenha()">Entrar</button>
+    <div class="login-error" id="erroSenha">Senha incorreta</div>
+  </div>
+</div>
+
+<!-- PORTAL -->
+<div class="container" id="portal">
+
   <header>
-    <img src="logo-areia-ana.png" class="logo" alt="Logo Areia Ana">
+    <img src="logo-areia-ana.png" class="logo">
     <h1>Portal de Acessos – Grupo Areia Ana</h1>
     <p class="subtitle">Escolha uma área e clique para abrir o painel ou sistema.</p>
   </header>
 
-  <!-- MENU -->
   <div class="main-menu">
-    <button class="menu-btn active" onclick="showSection('indicadores', this)">Indicadores</button>
-    <button class="menu-btn" onclick="showSection('comercial', this)">Comercial</button>
-    <button class="menu-btn" onclick="showSection('rh', this)">RH</button>
-    <button class="menu-btn" onclick="showSection('sistemas', this)">Sistemas</button>
-    <button class="menu-btn" onclick="showSection('calendario', this)">Calendário</button>
+    <button class="menu-btn active" onclick="showSection('indicadores',this)">Indicadores</button>
+    <button class="menu-btn" onclick="showSection('comercial',this)">Comercial</button>
+    <button class="menu-btn" onclick="showSection('rh',this)">RH</button>
+    <button class="menu-btn" onclick="showSection('sistemas',this)">Sistemas</button>
+    <button class="menu-btn" onclick="showSection('calendario',this)">Calendário</button>
   </div>
 
-  <!-- INDICADORES -->
+  <!-- SEÇÕES (mantidas como estavam) -->
   <section id="indicadores" class="section">
     <div class="section-title">Indicadores – Power BI</div>
     <div class="grid">
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiNjM2OGI4ZmEtOTc3Zi00NjgzLWE3MDUtYzk0NDBmMDAyN2Y2IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
+      <a class="link-card" target="_blank" href="#">
         <div class="link-title">Remessas Usina</div>
         <div class="link-meta">Power BI</div>
       </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiM2Q3NzQ0ZDMtZjZmYy00MGJmLTg0NWYtNjU4YTlmMWUyMjUwIiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Inadimplentes</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiN2JlMzJiZjQtMTcyZS00ZDAyLWIwZDQtYjQxMzM1ZmM4YTE0IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Pedidos – Agregados</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiMDlhYjhkNDktZWExNC00MTNhLTg2MDctZTYxOWIyZTNjMjM0IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Gastos e Retorno BTs</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiMjdhNGJhYWYtOWIxMC00NzJmLWE1NTAtMmFkYmY0ZjgwYmZjIiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">DRE</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiYWI2N2FlYjgtODJhNi00ODZhLThjMDgtNTZlMGYyMjk4N2Y2IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Volume de Carteira – Usina</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiOTQzNGRhNjQtYjNjZi00YTZjLTkxNzMtODc2MTUzZGQ0MWY5IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Custo por KM / Hora</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
     </div>
   </section>
 
-  <!-- COMERCIAL -->
-  <section id="comercial" class="section hidden">
-    <div class="section-title">Comercial – ClickUp</div>
-    <div class="grid">
+  <section id="comercial" class="section hidden"></section>
+  <section id="rh" class="section hidden"></section>
+  <section id="sistemas" class="section hidden"></section>
 
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
-        <div class="link-title">Lista de Oportunidades – Anderson</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-36453/eb523e88d6e9c38">
-        <div class="link-title">Lista de Oportunidades – Márcio</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-30393/59ba2d5bd702322">
-        <div class="link-title">Carteira Márcio</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-24473/3aeab89b75124c2">
-        <div class="link-title">Carteira Anderson</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-12053/62f6757b0d8af35">
-        <div class="link-title">Carteira Geral Unificada</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://doc.clickup.com/9007105436/d/h/8cdv1cw-26593/7d97ad164ca76b9">
-        <div class="link-title">Metas e Roteiro Comercial</div>
-        <div class="link-meta">ClickUp Docs</div>
-      </a>
-
-    </div>
-  </section>
-
-  <!-- RH -->
-  <section id="rh" class="section hidden">
-    <div class="section-title">RH</div>
-    <div class="grid">
-
-      <a class="link-card" target="_blank" href="https://superportal-empregador.vr.com.br/pontomais">
-        <div class="link-title">Ponto Mais</div>
-        <div class="link-meta">Controle de Ponto</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sistema.rhgestor.com.br/login?ReturnUrl=%2fPainel%2fIndexMaster">
-        <div class="link-title">RH Gestor</div>
-        <div class="link-meta">Sistema de RH</div>
-      </a>
-
-    </div>
-  </section>
-
-  <!-- SISTEMAS -->
-  <section id="sistemas" class="section hidden">
-    <div class="section-title">Sistemas Gerais</div>
-    <div class="grid">
-
-      <a class="link-card" target="_blank" href="https://ctasmart.com.br:8443/login">
-        <div class="link-title">CTA Smart</div>
-        <div class="link-meta">Abastecimento</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://areiaana.bubbleapps.io/version-test/pg_administrativa">
-        <div class="link-title">Bubble – Cargas</div>
-        <div class="link-meta">Sistema Interno</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://webmail-seguro.com.br/areiaana.com.br/">
-        <div class="link-title">E-mail Locaweb</div>
-        <div class="link-meta">Webmail</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://areiaana-remote.topconsuite.app:20200/pages/auth/login">
-        <div class="link-title">Topcon CRM</div>
-        <div class="link-meta">Comercial Usina</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://analytics.zoho.com/workspace/1762700000040012018">
-        <div class="link-title">Topcon BI</div>
-        <div class="link-meta">Dashboards</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://areiaana.topconsuite.app/">
-        <div class="link-title">Topcon Tech</div>
-        <div class="link-meta">Tecnologia</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://areiaana.rastrin.app/">
-        <div class="link-title">Topcon Fleet</div>
-        <div class="link-meta">Rastreadores</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://anaareiasportais.cigam.cloud/">
-        <div class="link-title">Portais CIGAM</div>
-        <div class="link-meta">ERP CIGAM</div>
-      </a>
-
-    </div>
-  </section>
-
-  <!-- CALENDÁRIO -->
   <section id="calendario" class="section hidden">
     <div class="section-title">Calendário Corporativo</div>
     <div class="grid-calendario">
@@ -317,6 +231,20 @@
 </div>
 
 <script>
+  const SENHA_CORRETA = "areiaadmin";
+
+  function validarSenha() {
+    const senha = document.getElementById("senha").value;
+    const erro = document.getElementById("erroSenha");
+
+    if (senha === SENHA_CORRETA) {
+      document.getElementById("loginOverlay").style.display = "none";
+      document.getElementById("portal").style.display = "block";
+    } else {
+      erro.style.display = "block";
+    }
+  }
+
   function showSection(id, btn) {
     document.querySelectorAll(".section").forEach(sec => sec.classList.add("hidden"));
     document.getElementById(id).classList.remove("hidden");
